[gd_scene load_steps=7 format=3 uid="uid://dtdsisbltmd1c"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_xe3l8"]
[ext_resource type="Texture2D" uid="uid://dpw2ohxyvqjvm" path="res://addons/Tiny Swords/Terrain/Ground/Shadows.png" id="2_um52j"]
[ext_resource type="Texture2D" uid="uid://dl5j3mrjqmexi" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Yellow_3Slides.png" id="3_1xfh5"]

[sub_resource type="LabelSettings" id="LabelSettings_fk66n"]
font_size = 20
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.313726)

[sub_resource type="LabelSettings" id="LabelSettings_334uo"]
font_size = 20
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.313726)

[sub_resource type="LabelSettings" id="LabelSettings_hox38"]
font_size = 30
shadow_size = 13
shadow_color = Color(0, 0, 0, 0.490196)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xe3l8")

[node name="StageInfo" type="Node2D" parent="."]
position = Vector2(944, 15)

[node name="Shadows" type="Sprite2D" parent="StageInfo"]
position = Vector2(95, 38)
scale = Vector2(2.61947, 0.986979)
texture = ExtResource("2_um52j")

[node name="Mission" type="Label" parent="StageInfo"]
offset_left = 17.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 68.0
text = "Exemple"
label_settings = SubResource("LabelSettings_fk66n")

[node name="Progress" type="Label" parent="StageInfo"]
offset_left = 19.0
offset_top = 36.0
offset_right = 149.0
offset_bottom = 72.0
text = "999 / 999"
label_settings = SubResource("LabelSettings_334uo")

[node name="ViewPlayer" type="Node2D" parent="."]
position = Vector2(15, 15)

[node name="ContainerLife" type="ColorRect" parent="ViewPlayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 250.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.952941, 0.952941, 0.952941, 1)

[node name="MaxLife" type="ColorRect" parent="ViewPlayer/ContainerLife"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -10.0
offset_right = 122.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.00392157, 0.00392157, 1)

[node name="Life" type="ColorRect" parent="ViewPlayer/ContainerLife/MaxLife"]
layout_mode = 0
offset_right = 244.0
offset_bottom = 20.0
color = Color(0.654075, 0.0277417, 0.0153869, 1)

[node name="ContainerStamina" type="ColorRect" parent="ViewPlayer"]
visible = false
offset_top = 25.0
offset_right = 250.0
offset_bottom = 50.0
color = Color(0.952941, 0.952941, 0.952941, 1)

[node name="MaxStamina" type="ColorRect" parent="ViewPlayer/ContainerStamina"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -10.0
offset_right = 122.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.137255, 0.0823529, 1)

[node name="Stamina" type="ColorRect" parent="ViewPlayer/ContainerStamina/MaxStamina"]
layout_mode = 0
offset_right = 244.0
offset_bottom = 20.0
color = Color(0, 0.443137, 0.117647, 1)

[node name="ContainerMagic" type="ColorRect" parent="ViewPlayer"]
visible = false
offset_top = 50.0
offset_right = 250.0
offset_bottom = 75.0
color = Color(0.952941, 0.952941, 0.952941, 1)

[node name="MaxMagic" type="ColorRect" parent="ViewPlayer/ContainerMagic"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -10.0
offset_right = 122.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0, 0.14902, 1)

[node name="Magic" type="ColorRect" parent="ViewPlayer/ContainerMagic/MaxMagic"]
layout_mode = 0
offset_right = 244.0
offset_bottom = 20.0
color = Color(0.192157, 0.215686, 1, 1)

[node name="Victory" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="RibbonYellow3Slides" type="Sprite2D" parent="Victory"]
position = Vector2(578, 125)
scale = Vector2(2.43229, 1.53125)
texture = ExtResource("3_1xfh5")

[node name="Win" type="Label" parent="Victory"]
offset_right = 1152.0
offset_bottom = 217.0
text = "Found memory!"
label_settings = SubResource("LabelSettings_hox38")
horizontal_alignment = 1
vertical_alignment = 1
